Fixed Nav on Small Screens

--- a/css/style.css
+++ b/css/style.css
@@ -46,3 +46,8 @@ header {
     text-align: center;
   }
 }
+@media (max-width: 767px) {
+  nav {
+    background-color: #333;
+  }
+}
